Download Button Fix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <p>Latest stable release from GitHub</p>
 
   <a class="download-btn"
-     href="https://github.com/hulivili-coder/PCManager/releases/latest/download/PCManagerSetup.exe">
+     href="https://github.com/hulivili-coder/PCManager/releases/download/v0.1.0/PCManagerSetup.exe">
      Download Installer
   </a>
 
@@ -96,3 +96,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
